SGrid -> YaspGrid transition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,9 @@ file(GLOB_RECURSE HEADER_LIST "${CMAKE_CURRENT_SOURCE_DIR}/../${_mod}/*.hh")
 list(APPEND COMMON_HEADER ${HEADER_LIST})
 endforeach(_mod DEPENDENCIES)
 set_source_files_properties( ${COMMON_HEADER} PROPERTIES HEADER_FILE_ONLY 1 )
-file( GLOB_RECURSE gdt_src "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx" )
-add_format(${gdt} ${gdt_src})
+file( GLOB_RECURSE gdt_cxx "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx" )
+file( GLOB_RECURSE gdt_cc "${CMAKE_CURRENT_SOURCE_DIR}/*.cc" )
+add_format(${gdt} ${gdt_cc} ${gdt_cxx})
 
 #disable most warnings from dependent modules
 foreach(_mod ${ALL_DEPENDENCIES})
