--- a/dune/gdt/test/linearelliptic/eocexpectations/CMakeLists.txt
+++ b/dune/gdt/test/linearelliptic/eocexpectations/CMakeLists.txt
@@ -7,14 +7,14 @@
 
 # expectation targets
 # CG
-add_library(expectations_linearelliptic_cg_discretizations_sgrid
+add_library(expectations_linearelliptic_cg_discretizations_yaspgrid
             STATIC
             EXCLUDE_FROM_ALL
-            cg-ao2013-2dsgrid.cxx
-            cg-er2007-2dsgrid.cxx
-            cg-esv2007-2dsgrid.cxx
-            cg-mixedboundary-2dsgrid.cxx
-            cg-spe10-2dsgrid.cxx)
+            cg-ao2013-2dyaspgrid.cxx
+            cg-er2007-2dyaspgrid.cxx
+            cg-esv2007-2dyaspgrid.cxx
+            cg-mixedboundary-2dyaspgrid.cxx
+            cg-spe10-2dyaspgrid.cxx)
 add_library(expectations_linearelliptic_cg_discretizations_alugrid
             STATIC
             EXCLUDE_FROM_ALL
@@ -25,14 +25,14 @@ add_library(expectations_linearelliptic_cg_discretizations_alugrid
             cg-spe10-2dalugrid.cxx)
 
 # SWIPDG
-add_library(expectations_linearelliptic_swipdg_discretizations_sgrid
+add_library(expectations_linearelliptic_swipdg_discretizations_yaspgrid
             STATIC
             EXCLUDE_FROM_ALL
-            swipdg-ao2013-2dsgrid.cxx
-            swipdg-er2007-2dsgrid.cxx
-            swipdg-esv2007-2dsgrid.cxx
-            swipdg-mixedboundary-2dsgrid.cxx
-            swipdg-spe10-2dsgrid.cxx)
+            swipdg-ao2013-2dyaspgrid.cxx
+            swipdg-er2007-2dyaspgrid.cxx
+            swipdg-esv2007-2dyaspgrid.cxx
+            swipdg-mixedboundary-2dyaspgrid.cxx
+            swipdg-spe10-2dyaspgrid.cxx)
 add_library(expectations_linearelliptic_swipdg_discretizations_alugrid
             STATIC
             EXCLUDE_FROM_ALL
@@ -48,8 +48,8 @@ foreach (_target expectations_linearelliptic_cg_discretizations_alugrid
   add_dune_alugrid_flags(${_target})
 endforeach (_target)
 foreach (_target expectations_linearelliptic_cg_discretizations_alugrid
-                 expectations_linearelliptic_cg_discretizations_sgrid
+                 expectations_linearelliptic_cg_discretizations_yaspgrid
                  expectations_linearelliptic_swipdg_discretizations_alugrid
-                 expectations_linearelliptic_swipdg_discretizations_sgrid)
+                 expectations_linearelliptic_swipdg_discretizations_yaspgrid)
   add_dune_mpi_flags(${_target})
 endforeach (_target)
