--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -37,12 +37,12 @@ foreach (test ${testnames})
     endif (${test})
   elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES alugrid)
     list(APPEND linearelliptic_cg_alugrid_test_binaries ${test})
-  elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES sgrid)
-    list(APPEND linearelliptic_cg_sgrid_test_binaries ${test})
+  elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES yaspgrid)
+    list(APPEND linearelliptic_cg_yaspgrid_test_binaries ${test})
   elseif (${test} MATCHES linearelliptic__swipdg_discretization AND ${test} MATCHES alugrid)
     list(APPEND linearelliptic_swipdg_discretization_alugrid_test_binaries ${test})
-  elseif (${test} MATCHES linearelliptic__swipdg_discretization AND ${test} MATCHES sgrid)
-    list(APPEND linearelliptic_swipdg_discretization_sgrid_test_binaries ${test})
+  elseif (${test} MATCHES linearelliptic__swipdg_discretization AND ${test} MATCHES yaspgrid)
+    list(APPEND linearelliptic_swipdg_discretization_yaspgrid_test_binaries ${test})
   elseif (${test} MATCHES linearelliptic__swipdg_estimators)
     list(APPEND linearelliptic_swipdg_estimator_alugrid_test_binaries ${test})
   elseif (${test} MATCHES hyperbolic AND ${test} MATCHES yaspgrid)
@@ -61,9 +61,9 @@ add_custom_target(test_binaries_prolongation_default DEPENDS ${prolongations_def
 add_custom_target(test_binaries_prolongation_fem DEPENDS ${prolongations_fem_test_binaries})
 add_custom_target(test_binaries_prolongation_pdelab DEPENDS ${prolongations_pdelab_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_alugrid DEPENDS ${linearelliptic_cg_alugrid_test_binaries})
-add_custom_target(test_binaries_linearelliptic_cg_discretization_sgrid DEPENDS ${linearelliptic_cg_sgrid_test_binaries})
+add_custom_target(test_binaries_linearelliptic_cg_discretization_yaspgrid DEPENDS ${linearelliptic_cg_yaspgrid_test_binaries})
 add_custom_target(test_binaries_linearelliptic_swipdg_discretization_alugrid DEPENDS ${linearelliptic_swipdg_discretization_alugrid_test_binaries})
-add_custom_target(test_binaries_linearelliptic_swipdg_discretization_sgrid DEPENDS ${linearelliptic_swipdg_discretization_sgrid_test_binaries})
+add_custom_target(test_binaries_linearelliptic_swipdg_discretization_yaspgrid DEPENDS ${linearelliptic_swipdg_discretization_yaspgrid_test_binaries})
 add_custom_target(test_binaries_linearelliptic_swipdg_estimator_alugrid DEPENDS ${linearelliptic_swipdg_estimator_alugrid_test_binaries})
 add_custom_target(test_binaries_hyperbolic_fv_discretization_yaspgrid DEPENDS ${hyperbolic_yaspgrid_test_binaries})
 add_custom_target(test_binaries_other DEPENDS ${other_binaries})
@@ -86,20 +86,20 @@ add_subdirectory(linearelliptic)
 add_subdirectory(hyperbolic)
 
 target_link_libraries(test_linearelliptic__cg_discretization__alugrid_fem_eigen    expectations_linearelliptic_cg_discretizations_alugrid)
-target_link_libraries(test_linearelliptic__cg_discretization__sgrid_fem_eigen      expectations_linearelliptic_cg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__cg_discretization__yaspgrid_fem_eigen      expectations_linearelliptic_cg_discretizations_yaspgrid)
 target_link_libraries(test_linearelliptic__cg_discretization__alugrid_fem_istl     expectations_linearelliptic_cg_discretizations_alugrid)
-target_link_libraries(test_linearelliptic__cg_discretization__sgrid_fem_istl       expectations_linearelliptic_cg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__cg_discretization__yaspgrid_fem_istl       expectations_linearelliptic_cg_discretizations_yaspgrid)
 target_link_libraries(test_linearelliptic__cg_discretization__alugrid_pdelab_eigen expectations_linearelliptic_cg_discretizations_alugrid)
-target_link_libraries(test_linearelliptic__cg_discretization__sgrid_pdelab_eigen   expectations_linearelliptic_cg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__cg_discretization__yaspgrid_pdelab_eigen   expectations_linearelliptic_cg_discretizations_yaspgrid)
 target_link_libraries(test_linearelliptic__cg_discretization__alugrid_pdelab_istl  expectations_linearelliptic_cg_discretizations_alugrid)
-target_link_libraries(test_linearelliptic__cg_discretization__sgrid_pdelab_istl    expectations_linearelliptic_cg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__cg_discretization__yaspgrid_pdelab_istl    expectations_linearelliptic_cg_discretizations_yaspgrid)
 
 target_link_libraries(test_linearelliptic__swipdg_discretization__alugrid_fem_eigen    expectations_linearelliptic_swipdg_discretizations_alugrid)
-target_link_libraries(test_linearelliptic__swipdg_discretization__sgrid_fem_eigen      expectations_linearelliptic_swipdg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__yaspgrid_fem_eigen      expectations_linearelliptic_swipdg_discretizations_yaspgrid)
 target_link_libraries(test_linearelliptic__swipdg_discretization__alugrid_fem_istl     expectations_linearelliptic_swipdg_discretizations_alugrid)
-target_link_libraries(test_linearelliptic__swipdg_discretization__sgrid_fem_istl       expectations_linearelliptic_swipdg_discretizations_sgrid)
-target_link_libraries(test_linearelliptic__swipdg_discretization__sgrid_pdelab_eigen   expectations_linearelliptic_swipdg_discretizations_sgrid)
-target_link_libraries(test_linearelliptic__swipdg_discretization__sgrid_pdelab_istl    expectations_linearelliptic_swipdg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__yaspgrid_fem_istl       expectations_linearelliptic_swipdg_discretizations_yaspgrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__yaspgrid_pdelab_eigen   expectations_linearelliptic_swipdg_discretizations_yaspgrid)
+target_link_libraries(test_linearelliptic__swipdg_discretization__yaspgrid_pdelab_istl    expectations_linearelliptic_swipdg_discretizations_yaspgrid)
 
 target_link_libraries(test_linearelliptic__swipdg_estimators__alugrid_fem_eigen expectations_linearelliptic_swipdg_discretizations_alugrid
                                                                                 expectations_linearelliptic_swipdg_estimators_alugrid)
