--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -12,59 +12,19 @@ BEGIN_TESTCASES()
 
 END_TESTCASES()
 
+set(TRAVIS_BUILDER 15)
+
+set(current_idx 0)
 foreach (test ${dxt_test_binaries})
-  if (${test} MATCHES spaces)
-    list(APPEND spaces_test_binaries ${test})
-  elseif (${test} MATCHES operators)
-    list(APPEND operators_test_binaries ${test})
-  elseif (${test} MATCHES projections)
-    if (${test} MATCHES fem)
-      list(APPEND projections_fem_test_binaries ${test})
-    elseif (${test} MATCHES pdelab)
-      list(APPEND projections_pdelab_test_binaries ${test})
-    else (${test})
-      list(APPEND projections_default_test_binaries ${test})
-    endif (${test})
-  elseif (${test} MATCHES prolongations)
-    if (${test} MATCHES fem)
-      list(APPEND prolongations_fem_test_binaries ${test})
-    elseif (${test} MATCHES pdelab)
-      list(APPEND prolongations_pdelab_test_binaries ${test})
-    else (${test})
-      list(APPEND prolongations_default_test_binaries ${test})
-    endif (${test})
-  elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES alugrid)
-    list(APPEND linearelliptic_cg_alugrid_test_binaries ${test})
-  elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES yaspgrid)
-    list(APPEND linearelliptic_cg_yaspgrid_test_binaries ${test})
-  elseif (${test} MATCHES linearelliptic__swipdg_discretization AND ${test} MATCHES alugrid)
-    list(APPEND linearelliptic_swipdg_discretization_alugrid_test_binaries ${test})
-  elseif (${test} MATCHES linearelliptic__swipdg_discretization AND ${test} MATCHES yaspgrid)
-    list(APPEND linearelliptic_swipdg_discretization_yaspgrid_test_binaries ${test})
-  elseif (${test} MATCHES linearelliptic__swipdg_estimators)
-    list(APPEND linearelliptic_swipdg_estimator_alugrid_test_binaries ${test})
-  elseif (${test} MATCHES hyperbolic AND ${test} MATCHES yaspgrid)
-    list(APPEND hyperbolic_yaspgrid_test_binaries ${test})
-  else (${test})
-    list(APPEND other_binaries ${test})
-  endif (${test})
+    math(EXPR list_idx "${current_idx} % ${TRAVIS_BUILDER}")
+    list(APPEND test_names_numbered_${list_idx} ${test})
+    MATH(EXPR current_idx "${current_idx}+1")
 endforeach (test ${testnames})
 
-add_custom_target(test_binaries_space DEPENDS ${spaces_test_binaries})
-add_custom_target(test_binaries_operator DEPENDS ${operators_test_binaries})
-add_custom_target(test_binaries_projection_default DEPENDS ${projections_default_test_binaries})
-add_custom_target(test_binaries_projection_fem DEPENDS ${projections_fem_test_binaries})
-add_custom_target(test_binaries_projection_pdelab DEPENDS ${projections_pdelab_test_binaries})
-add_custom_target(test_binaries_prolongation_default DEPENDS ${prolongations_default_test_binaries})
-add_custom_target(test_binaries_prolongation_fem DEPENDS ${prolongations_fem_test_binaries})
-add_custom_target(test_binaries_prolongation_pdelab DEPENDS ${prolongations_pdelab_test_binaries})
-add_custom_target(test_binaries_linearelliptic_cg_discretization_alugrid DEPENDS ${linearelliptic_cg_alugrid_test_binaries})
-add_custom_target(test_binaries_linearelliptic_cg_discretization_yaspgrid DEPENDS ${linearelliptic_cg_yaspgrid_test_binaries})
-add_custom_target(test_binaries_linearelliptic_swipdg_discretization_alugrid DEPENDS ${linearelliptic_swipdg_discretization_alugrid_test_binaries})
-add_custom_target(test_binaries_linearelliptic_swipdg_discretization_yaspgrid DEPENDS ${linearelliptic_swipdg_discretization_yaspgrid_test_binaries})
-add_custom_target(test_binaries_linearelliptic_swipdg_estimator_alugrid DEPENDS ${linearelliptic_swipdg_estimator_alugrid_test_binaries})
-add_custom_target(test_binaries_hyperbolic_fv_discretization_yaspgrid DEPENDS ${hyperbolic_yaspgrid_test_binaries})
-add_custom_target(test_binaries_other DEPENDS ${other_binaries})
+MATH(EXPR max_idx "${TRAVIS_BUILDER}-1")
+foreach(idx RANGE 0 ${max_idx} 1)
+    add_custom_target(test_binaries_builder_${idx} DEPENDS ${test_names_numbered_${idx}})
+endforeach(idx RANGE 0 ${max_idx} 1)
 
 # link spe10 data file if present
 if (NOT ${SPE10MODEL1DATA} STREQUAL "SPE10MODEL1DATA-NOTFOUND")
