--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -15,11 +15,15 @@ END_TESTCASES()
 set(TRAVIS_BUILDER 15)
 
 set(current_idx 0)
-foreach (test ${dxt_test_binaries})
+
+foreach (target ${dxt_test_binaries})
     math(EXPR list_idx "${current_idx} % ${TRAVIS_BUILDER}")
-    list(APPEND test_names_numbered_${list_idx} ${test})
+    list(APPEND test_names_numbered_${list_idx} ${target})
+    foreach(testname ${dxt_test_names_${target}})
+        set_tests_properties(${testname} PROPERTIES LABELS "builder_${list_idx}")
+    endforeach()
     MATH(EXPR current_idx "${current_idx}+1")
-endforeach (test ${testnames})
+endforeach (target ${dxt_test_binaries})
 
 MATH(EXPR max_idx "${TRAVIS_BUILDER}-1")
 foreach(idx RANGE 0 ${max_idx} 1)
