--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ before_install:
   - ${SUPERDIR}/.travis/trusty_apt_setup.bash
   - export PATH=/usr/lib/ccache:$PATH
   - ccache -s
+  - sudo -E gem install mtime_cache
+  - mtime_cache dune-*/**/*.{%{cpp}} -c .mtime_cache/cache.json
   # our local scripts look for an OPTS env entry
   - ./local/bin/download_external_libraries.py
   - ./local/bin/build_external_libraries.py
@@ -113,6 +115,9 @@ branches:
 cache:
   directories:
     - $HOME/.ccache
+    # don't use potentially not-yet-set matrix var here
+    - $HOME/dune_build
+    - $HOME/.mtimes
 
 env:
   global:
