[travis] disable mtime cache until issue is resolved

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,8 @@ before_install:
   - ${SUPERDIR}/.travis/trusty_apt_setup.bash
   - export PATH=/usr/lib/ccache:$PATH
   - ccache -s
-  - sudo -E gem install mtime_cache
-  - mtime_cache --verbose dune-*/**/*.{%{cpp}} -c .mtime_cache/cache.json
+  #- sudo -E gem install mtime_cache
+  #- mtime_cache --verbose dune-*/**/*.{%{cpp}} -c .mtime_cache/cache.json
   # our local scripts look for an OPTS env entry
   - ./local/bin/download_external_libraries.py
   - ./local/bin/build_external_libraries.py
